[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "A collection of brain games implemented in Python for educational purposes."
authors = ["Laura609 <laura.metnietse@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Laura609/python-project-49"

packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.13"
prompt = "^0.4.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
ruff = "^0.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
preview = true
select = ["E", "F", "I", "C90"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]